--- a/form-react/src/components/PaymentScreen.module.css
+++ b/form-react/src/components/PaymentScreen.module.css
@@ -86,7 +86,7 @@
 @media screen and (min-width: 1400px) {
   .paymentIntro {
     /* width: 57%; */
-    height: 82vh;
+    height: 86vh;
   }
   /*.paymentIntro > div:nth-child(2) {
      margin: 1vw auto; 
